speculative code for how turns will work for each type of player

--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\Card.cs" />
+    <Compile Include="Data\Deck.cs" />
     <Compile Include="Data\Heroes\Haka.cs" />
     <Compile Include="Data\IEffect.cs" />
     <Compile Include="Data\GameEnvironment.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Data\IPlayer.cs" />
     <Compile Include="Data\Minion.cs" />
     <Compile Include="Data\Villain.cs" />
+    <Compile Include="GameEngine.cs" />
     <Compile Include="HandPanel.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tests\BasicTest.cs" />
