--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -153,22 +153,22 @@
     <Resource Include="Data\NumOfCards.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Villain\baron_blade\backlash_field.png" />
-    <Resource Include="Images\Villain\baron_blade\bb_back.png" />
-    <Resource Include="Images\Villain\baron_blade\bb_death.png" />
-    <Resource Include="Images\Villain\baron_blade\bb_initial.png" />
-    <Resource Include="Images\Villain\baron_blade\bb_instr_back.png" />
-    <Resource Include="Images\Villain\baron_blade\bb_instr_front.png" />
-    <Resource Include="Images\Villain\baron_blade\blade_battalion.png" />
-    <Resource Include="Images\Villain\baron_blade\consider_the_price_of_victory.png" />
-    <Resource Include="Images\Villain\baron_blade\devious_disruption.png" />
-    <Resource Include="Images\Villain\baron_blade\elemental_redistributor.png" />
-    <Resource Include="Images\Villain\baron_blade\flesh_repair_nanites.png" />
-    <Resource Include="Images\Villain\baron_blade\hasten_doom.png" />
-    <Resource Include="Images\Villain\baron_blade\living_force_field.png" />
-    <Resource Include="Images\Villain\baron_blade\mobile_defense_platform.png" />
-    <Resource Include="Images\Villain\baron_blade\powerer_remote_turret.png" />
-    <Resource Include="Images\Villain\baron_blade\slash_and_burn.png" />
+    <Resource Include="Images\Villain\BaronBlade\backlash_field.png" />
+    <Resource Include="Images\Villain\BaronBlade\BaronBlade_back.png" />
+    <Resource Include="Images\Villain\BaronBlade\BaronBlade_death.png" />
+    <Resource Include="Images\Villain\BaronBlade\BaronBlade_initial.png" />
+    <Resource Include="Images\Villain\BaronBlade\BaronBlade_instr_back.png" />
+    <Resource Include="Images\Villain\BaronBlade\BaronBlade_instr_front.png" />
+    <Resource Include="Images\Villain\BaronBlade\blade_battalion.png" />
+    <Resource Include="Images\Villain\BaronBlade\consider_the_price_of_victory.png" />
+    <Resource Include="Images\Villain\BaronBlade\devious_disruption.png" />
+    <Resource Include="Images\Villain\BaronBlade\elemental_redistributor.png" />
+    <Resource Include="Images\Villain\BaronBlade\flesh_repair_nanites.png" />
+    <Resource Include="Images\Villain\BaronBlade\hasten_doom.png" />
+    <Resource Include="Images\Villain\BaronBlade\living_force_field.png" />
+    <Resource Include="Images\Villain\BaronBlade\mobile_defense_platform.png" />
+    <Resource Include="Images\Villain\BaronBlade\powerer_remote_turret.png" />
+    <Resource Include="Images\Villain\BaronBlade\slash_and_burn.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Environment\insula_primus\back_of_card.png" />
