--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -88,6 +88,9 @@
       <DependentUpon>ViewHand.xaml</DependentUpon>
     </Compile>
     <Compile Include="Tests\VillainTest.cs" />
+    <Compile Include="Start.xaml.cs">
+      <DependentUpon>Start.xaml</DependentUpon>
+    </Compile>
     <Page Include="GameBoard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -97,6 +100,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ViewHand.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Start.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
