added and tested lifepoint and immunities

--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Tests\ObjectMother.cs" />
     <Compile Include="Tests\UtilityTest.cs" />
     <Compile Include="Tests\MinionTest.cs" />
     <Compile Include="Tests\EnvironmentTest.cs" />
