--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -56,7 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Data\Effects\OneShotEffect.cs" />
+    <Compile Include="Data\Effects\DamageEffects.cs" />
     <Compile Include="Data\Villians\BaronBlade.cs" />
     <Compile Include="Data\Card.cs" />
     <Compile Include="Data\Deck.cs" />
