--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -86,6 +86,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Tests\HakaTest.cs" />
     <Compile Include="Tests\ObjectMother.cs" />
     <Compile Include="Tests\UtilityTest.cs" />
     <Compile Include="Tests\MinionTest.cs" />
